review of user stories NGUI

--- a/Content/TactileInterface/useCases.tex
+++ b/Content/TactileInterface/useCases.tex
@@ -1,10 +1,9 @@
 \section{User Stories}
-The user story on which the implementation of the non-graphical user interface was based on were as follows:
+The user story on which the implementation of the non-graphical user interface was based on is:
 
 \story{Enable navigation with screen turned off}{High}
-{As a user, I, would like to save power by turning off the screen while still being able to navigate songs when the screen is off.
+{As a user, I would like to save power by turning off the screen, while still being able to navigate songs when the screen is off.
 A screen is turned off when the power button is pressed.}
 {\begin{itemize}
-\item The application can still be controlled after the \texttt{Power} button is pressed.
-\item Play, pause, stop, previous and next functionally should still be available with no graphical interface.
+\item Play, pause, stop, previous and next functionally should still be available after the \texttt{power} button is pressed.
 \end{itemize}}
