--- a/Content/Introduction/introduction.tex
+++ b/Content/Introduction/introduction.tex
@@ -21,14 +21,12 @@ Based on this knowledge the first problem can be stated:
 
 %Second Problem - UI%
 \noindent Operating a smartphone while running is difficult, especially if it is placed in the pocket or on the arm of the runner.
-In order for the runner to operate the smartphone properly, the runner would have to stop running, or focus more than normally, which can disrupt the runner's form, and lead to injuries and accidents.
+In order for the runner to operate the smartphone, pause or change song, the runner would have to stop running, or focus more than normally. This can disrupt the runner's form, and lead to injuries and accidents.
 Based on this knowledge the second problem can be stated: 
 
 \begin{center}
 \textit{How can a smartphone application be operated without disrupting the runner's form and/or concentration?}
-\end{center}\Alexander{Define what ``operated'' means, what operations?}
-
-\Alexander{Make sure the third problem is the first thing written on page 2}
+\end{center}
 %Third Problem - Methodology%
 %\noindent Most large scale software projects fail. 
 \noindent According to \citet{gartner:failure} \textit{``A full 66 percent of large scale projects fail ...”}, and although this is not a large scale project, some of the same pitfalls exist.
