review usecases musicplayer

--- a/Content/MusicPlayer/useCases.tex
+++ b/Content/MusicPlayer/useCases.tex
@@ -1,5 +1,5 @@
 \section{User Stories}
-The following are the most interesting user stories used to develop the Music Player module. Some of the stories depend on other modules: it is, for example, not possible to ``Play music files'' without the Song Scanner, which is described in \Cref{chap:songScanner}.
+The following are the most interesting user stories used to develop the Music Player module. Some of the stories depend on other modules. It is, for example, not possible to ``Play music files'' without the Song Scanner, which is described in \Cref{chap:songScanner}.
 
 \story{Play music files.}{High}
 {As a user, I, want to listen to the music files stored on my device.}
