Corrected methodology intro and moved refactoring to other

--- a/Content/ReflectionMethodology/reflectionRefactoring.tex
+++ b/Content/ReflectionMethodology/reflectionRefactoring.tex
@@ -1,4 +1,4 @@
-\section{Refactoring}
+\subsection{Refactoring}
 During the project, we were not very good at refactoring existing code when adding new functionality. As a result, the quality of the code did not live up to our expectations. To solve this, we created a low priority refactoring task, which was estimated to a few hours each iteration. This turned out to be a bad approach since low-priority tasks were usually neglected. 
 
 In the group we agreed to remedy bad smells on sight. This, however, was not done because it would have taken a considerable amount of time to do. We further postponed refactoring, in favor of completing the second release faster. This did not help getting refactoring done.
