Moved some todos.

--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -21,7 +21,7 @@ The \texttt{MediaPlayer}'s state diagram can be seen in \cref{fig:medaiPlayerSta
 
 \begin{figure}[h!]
   \centering
-    \includegraphics[scale=.33]{Images/mediaplayerStateDiagram.png}
+    \includegraphics[width=\textwidth]{Images/mediaplayerStateDiagram.png}
   \caption{A state diagram which shows a MediaPlayer object's life cycle. Taken from \citet{android:MediaPlayer}.}
   \label{fig:medaiPlayerState}
 \end{figure}
