--- a/Report.tex
+++ b/Report.tex
@@ -22,6 +22,11 @@
 \label{chap:intro}
 \input{Content/Introduction/introduction}
 
+\Alexander{User story vs. task}
+\Alexander{Solution vs. Program vs. Application vs. Product}
+\Alexander{Planning vs. Planning Game}
+\Alexander{For example vs. e.g.}
+
 \chapter{Methodology}
 \label{chap:methodology}
 \input{Content/Methodology/methodology}
