--- a/Content/Refactoring/intro.tex
+++ b/Content/Refactoring/intro.tex
@@ -1,1 +1,1 @@
-In this project we experimented with refactoring as a scheduled task, instead of refactoring all the time as XP prescribes. The goal of refactoring is to make code more readable and more maintainable. We encountered some bad smells in our code, such as code duplication, and we tried to remedy them in our refactoring task.\Christoffer{er i enige i forhold til XP?} %In this chapter, we will cover examples of bad smells we encountered and how we attempted to remedy them.
+In this project we experimented with refactoring as a scheduled task. The goal of refactoring is to make code more readable and more maintainable. We encountered some bad smells in our code, such as code duplication, and we tried to remedy them in our refactoring task. %In this chapter, we will cover examples of bad smells we encountered and how we attempted to remedy them.
