--- a/Content/ReflectionMethodology/reflectionTesting.tex
+++ b/Content/ReflectionMethodology/reflectionTesting.tex
@@ -1,2 +1,3 @@
 \subsection{Testing}
-\Christoffer{slice reflections from Test section and put here?}
+%\Christoffer{slice reflections from Test section and put here?}
+Test reflections has been covered in \Cref{sec:testImplObservations}.
