--- a/Content/TemporaryWorkSheets/Methodology/retrospective5.tex
+++ b/Content/TemporaryWorkSheets/Methodology/retrospective5.tex
@@ -16,7 +16,6 @@ We have not made any changes to our previous title or icon, but upon reflection 
 We have encountered several issues when writing the report. Many of these issues, and the difficulty getting started, can be contributed to the missing metaphor or vision for the report. Contrary to the program, we do not share, or have discussed, any common metaphor of the report
 
 \subsubsection{40-hour Work Week}
-\Ivan{Evaluate how the fragmentation of timeslots have affected the project.}
 
 The 40-hour work week practice is used to combat burnout.
 In this iteration we clearly worked much less than 40 hours a week, however, we have still experienced burnout.
@@ -29,19 +28,17 @@ Another reason for our burnout is the lack of shared vision as explained in meta
 Further we did not plan thoroughly, hence a lot of work needed to be done before actually starting on an issue. The has caused many to be less enthusiastic and just not start working on any issues.
 
 This has also shown us how important planning and structure really is.
-\Ivan{What is the solution to counter this?}
+
 
 \subsubsection{Small Releases}
 Although creating a release last iteration, we have not used it for anything at all since. This is due to the fact we have not gotten any external testers or customers to test it.
 
 The reason for us not taking the role as surrogate customer and testing it, is we have tested the shit out of it when creating it and every time we debugged and ran it, hence we did already know how and where it works.\linebreak
-This leads to a very low usability, given that novelty is prioritised higher. The scale is very much tipped in favor of novelty, given we have no user to complain.\linebreak \Ivan{Define novelty!}
+This leads to a very low usability, given that novelty is prioritised higher. The scale is very much tipped in favor of novelty, given we have no user to complain.\linebreak 
 This decision is not made actively, but because we are heading for an exam and not actually distributing the program, we have experienced that novelty is rated higher.\linebreak
 Furthermore, the only usages of the program is done by us at the demonstration, hence the low limit of usability.
 
 If we should have followed XP to the letter, we should have taken the time to (user) test it thoroughly as a customer.
-\Ivan{It is sad that we have not gotten this to work.}
-\Ivan{Would have been a good opportunity to use the surrogate costumer role to look at the program with a different set of eyes. This could lead to other ideas and innovation.} 
 
 \subsubsection{On-site Customer}
 When taking the role as on-site customer, we have a tendency of polluting our decisions based on what is interesting to develop. We, as a surrogate customer, focus more on what is interesting for our exam than on things that may be interesting for an on-site customer.
@@ -49,9 +46,6 @@ When taking the role as on-site customer, we have a tendency of polluting our de
 e.g. Usability issues are prioritised low.
 
 The acceptance tests, we should create as a surrogate customer, will be done as a mini project in TOV. The reason for us to focus on acceptance test in TOV, is because we cannot reflect upon it before trying it, and it is an important part of testing in XP.
-\Ivan{Maybe mention something about how, we have used this practice in a other way, did that work?}
-\Ivan{Must a surrogate customer only be used in review and acceptance test?}
-\Ivan{Can we integrate the surrogate customer role in the daily work? It would be difficult, since the idea is to forget oneself and be a customer instead. Discuss. One upside could be how we, while developing, always can be in the user/runners stead, since it is so close to us.}
 
 \subsubsection{Planning}
 \paragraph{Time Tracking:}
