--- a/Content/Test/testReflection.tex
+++ b/Content/Test/testReflection.tex
@@ -1,4 +1,5 @@
 \section{Implementation Observations}
+\label{sec:testImplObservations}
 This section is where the reflections about the programmatic part of the test should be. Hence NO reflections about methodology here.
 
 \paragraph{Acceptance Tests}
@@ -13,7 +14,7 @@ We also found that even though unit tests enable regression testing to be perfor
 Even though the tests might take a while to write, we found that they were generally worth the time to write. The reason for this was that some of the time invested in writing them was regained later because the tests caught errors that we would otherwise have spent a lot of time debugging to find.
 
 % % % % % % % % % % % % % % % % % % % %
-\Christoffer{should the stuff below be moved to methodology reflection?}
+%\Christoffer{should the stuff below be moved to methodology reflection?}
 
 Testing also helped enforced other XP practices than refactoring. Namely collective ownership, pair programming, and continuous integration. 
 
