--- a/Content/Refactoring/implRefactoring.tex
+++ b/Content/Refactoring/implRefactoring.tex
@@ -1,5 +1,4 @@
 \section{Implementation of Refactoring}
-\Christoffer{Listing texts in the whole section should probably be less general}
 After a review of the project's source code, we created a list of the bad smells identified. Of these, the two most frequently occurring were
 \begin{itemize}
 \item Duplicated code
@@ -10,7 +9,7 @@ In the following subsections, concrete examples of how we dealt with them are il
 \subsection{Refactoring of Duplicated code}
 The method in \Cref{lst:dupBefore} shows a method which suffered from the duplicated code smell. As can be seen in the sample, the two for-each loops perform identical operations on a list. They both iterate over a list and if an element from that list is contained in another list, it is removed from that list.
 
-\begin{code}{lst:dupBefore}{Example of code before refactoring.}
+\begin{code}{lst:dupBefore}{Example of duplicate code before refactoring.}
 \begin{lstlisting}
  public List<Song> getMatchingSongs(int num, int thresholdBMP){
     ...
@@ -33,7 +32,7 @@ The method in \Cref{lst:dupBefore} shows a method which suffered from the duplic
 \Cref{lst:dup1After} shows the method after method extraction has been performed on it, and two method calls placed in place of the duplicated code.
 % % % % % % % % % % % % % % % % % % % % % %
 
-\begin{code}{lst:dup1After}{Example of code after refactoring from \Cref{lst:dupBefore}.}
+\begin{code}{lst:dup1After}{Example of duplicate code after method extraction from \Cref{lst:dupBefore}.}
 \begin{lstlisting}
  public List<Song> getMatchingSongs(int num, int thresholdBMP){
     ..
@@ -60,10 +59,10 @@ private void removeDuplicateSongs(List<Song> songList, List<Song> songs){
 
 As can be seen, the refactored method is both shorter, and more readable because it not has a method name which explains exactly what the for-each loop does. Thus, both readability and maintainability has been improved.
 \subsection{Refactoring of Long Method}
-The long method shown in \Cref{lst:longBefore} is an example from the project source code, which was refactored. It suffered from the long method bad smell. When this smell is found, it can indicate that a method is trying to handle too many responsibilities. This smell hurts readability and thus maintainability.\Christoffer{bedre formulering af this smell hurts?}
+The long method shown in \Cref{lst:longBefore} is an example from the project source code, which was refactored. It suffered from the long method bad smell. When this smell is found, it can indicate that a method is trying to handle too many responsibilities. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
-Method extraction was performed on the method, and this resulted in three new methods. As can be seen in \Cref{lst:long1After} the code from lines 2 - 8 in 
+Method extraction was performed on the method, and this resulted in three new methods. As can be seen in \Cref{lst:long3After} the code from lines 2 - 4 in 
 \Cref{lst:longBefore} were extracted, to a new method with minor a modification. 
 
 \begin{code}{lst:longBefore}{Example of a method which is too long, and suffers from the long method smell.}
@@ -94,45 +93,6 @@ final public void selectNextSong() {
 \end{lstlisting}
 \end{code}
 
-% % % % % % % % % % % % % % % % %
-
-\begin{code}{lst:long1After}{Example of extracted method from refactored code \Cref{lst:longBefore}.}
-\begin{lstlisting}
-private boolean refillQueueWhenEmpty() {
-    if (_nextSongs == null || _nextSongs.size() == 0) {
-        _nextSongs = getMatchingSongs(_lookAheadSize, _BPMDeviation);
-    }
-    
-    if (_nextSongs.size() == 0 && _prevSongs.size() > 0){
-        _prevSongs.clear();
-        _nextSongs = getMatchingSongs(_lookAheadSize, _BPMDeviation);
-    }
-    
-    return _nextSongs.size() != 0;
-}
-\end{lstlisting}
-\end{code}
-
-% % % % % % % % % % % % % 
-
-The same was done to lines 12 - 18, which were extracted to the method shown in \Cref{lst:long2After}, and again in lines 20 - 23 which can be seen in \Cref{lst:long3After}
-
-% % % % % % % % % % % % %
-
-\begin{code}{lst:long2After}{Example of extracted method from refactored code \Cref{lst:longBefore}.}
-\begin{lstlisting}
-private void moveCurrentSongToPrevious() {
-    if (_currentSong != null){
-        _prevSongsSizeBeforeAdd = _prevSongs.size();
-        _prevSongs.add(_currentSong);
-
-        if (_prevSongs.size() > _prevSize){
-            _prevSongs.remove(0);
-        }
-    }
-}
-\end{lstlisting}
-\end{code}
 
 % % % % % % % % % % % % % %
 
