Added some preface and link in title page

--- a/Addendum/Preface/preface.tex
+++ b/Addendum/Preface/preface.tex
@@ -1,4 +1,14 @@
 \chapter{Preface}
+This report is written by four 8th semester software engineering students at Aalborg University.\\
+
+\noindent The source code is, per Aalborg University policies, available by searching for this project on \url{http://projekter.aau.dk/projekter/}.\\
+
+\noindent Furthermore, it is available as a zip archive through GitHub:
+
+\begin{itemize}
+\item \parbox{.8\textwidth}{\url{https://github.com/SW802F15/SourceCode/archive/9eac3c911c7ba5ea72dcf174082534a35bcce809.zip}}
+\item \url{https://goo.gl/rsCzEa} (shortening of above URL)
+\end{itemize}
 
 
 
@@ -15,7 +25,5 @@
 
 
 
-
-
-~\\\\
-\input{Addendum/Preface/signature}
+\vspace{5cm}
+\noindent \input{Addendum/Preface/signature}
