XP vs Scrum reason

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -216,3 +216,11 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
     howpublished = "\url{http://www.extremeprogramming.org}",
     note = "[Online; Accessed 2015-05-26.]"
 }
+
+@misc{xp:scrum,
+	title={Scrum, Scrumban and Extreme Programming},
+	author={Eva Johnson},
+	year={2014},
+	howpublished = "\url{http://intland.com/blog/sdlc/extreme-programming-scrum-scrumban/}",
+	note = "[Online; Accessed 2015-05-27.]"
+}
