--- a/Content/Methodology/scrumComparison.tex
+++ b/Content/Methodology/scrumComparison.tex
@@ -1,11 +1,11 @@
 \section{Extreme Programming versus Scrum}
-\Ivan{motiver sammanligningen}
-\Alexander{Write something about Scrum being the most (by far) known and used agile methodology, hence a comparison is warranted.}
-\Kristian{why do we even have this section?, from mountaingoatsoftware}
-The two are similar, both being agile methodologies with self-organising teams, however there exists some significant differences.
+Scrum is one of, if not the, most popular agile methodology today.
+Almost all developers know what Scrum is, hence we will compare XP and Scrum.
+The two are similar, both being agile methodologies with self-organising teams, and similar meeting practices, however there exists some significant differences.
 
 The most significant difference, is that Scrum does not have any development oriented practises.
 XP on the other hand, has plenty of development oriented practises. Practises such as pair programming, test-driven development, refactoring, automated testing, simple design, and so forth.
+The major difference originates, acording to \citet{xp:scrum}, from Scrum being a project management framework, whereas XP is purely a software development methodology.
 
 Another difference is the flexibility of the iteration, or sprints as they are called in Scrum.
 When a sprint is planned and started, the sprint backlog is not susceptible to change.
