TOC moved refactor to next page.

--- a/Report.tex
+++ b/Report.tex
@@ -60,6 +60,7 @@
 \label{chap:test}
 \input{Content/Test/test}
 
+\addtocontents{toc}{\protect\newpage}
 \chapter{Refactoring}
 \label{chap:refactoring}
 \input{Content/Refactoring/refactoring}
