--- a/Addendum/Preface/preface.tex
+++ b/Addendum/Preface/preface.tex
@@ -6,8 +6,8 @@ This report is written by four 8th semester software engineering students at Aal
 \noindent Furthermore, it is available as a zip archive through GitHub:
 
 \begin{itemize}
-\item \parbox{.8\textwidth}{\url{https://github.com/SW802F15/SourceCode/archive/9eac3c911c7ba5ea72dcf174082534a35bcce809.zip}}
-\item \url{https://goo.gl/rsCzEa} (shortening of above URL)
+\item \parbox{.8\textwidth}{\url{https://github.com/SW802F15/SourceCode/archive/79117cbbfdb588ac03c1d13471e8398698fcad64.zip}}
+\item \url{https://goo.gl/FYk886} (shortening of above URL)
 \end{itemize}
 
 
