added thx to preface

--- a/Addendum/Preface/preface.tex
+++ b/Addendum/Preface/preface.tex
@@ -10,7 +10,7 @@ This report is written by four 8th semester software engineering students at Aal
 \item \url{https://goo.gl/FYk886} (shortening of above URL)
 \end{itemize}
 
-
+We would like to thank our supervisor Ivan Aaen for providing guidance and feedback.
 
 
 
