--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -25,7 +25,7 @@ The complete map of which practices support each other, can be seen in \Cref{fig
 
 \paragraph{40-hour Week} is the suggested length of a work week in an XP project.
 The relatively short week is practised because one needs to be on the top of their game when working.
-Being well rested and energised should reduce the number of mistakes, as well as increasing patience when pair programming.
+Being well rested and energised should reduce the number of mistakes, as well as increase patience when pair programming.
 
 \paragraph{Coding Standards} reduce the time it takes to understand code written by others.
 A coding standard also ensures that all developers write code the same way.
