A few corrections to tempo player tour

--- a/Content/TempoPlayer/tour.tex
+++ b/Content/TempoPlayer/tour.tex
@@ -1,4 +1,4 @@
-\section{The Tour}
+%\section{The Tour}
 Tempo player is an application for the Android platform, which is able to play and select music from an already existing library of songs, which fits the user's running pace. It uses the accelerometer for calculating the user's running pace. The application's main screen can be seen in \Cref{fig:mainScreen}. 
 
 \begin{figure}[h!]
