--- a/Report.tex
+++ b/Report.tex
@@ -98,13 +98,13 @@
 \bibliography{Bibliography/bibliography}
 
 
-\input{Appendix/appendixDVD}
+%\input{Appendix/appendixDVD}
 
 
 
 %%% DELETE BEFORE FINAL %%%
-\chapter{Examples \& ToDo}
-\input{PreamblePreview/preamblePreview}
-\clearpage
+%\chapter{Examples \& ToDo}
+%\input{PreamblePreview/preamblePreview}
+%\clearpage
 \listoftodos
 \end{document}
