--- a/Content/Test/testReflection.tex
+++ b/Content/Test/testReflection.tex
@@ -1,10 +1,5 @@
-\section{Implementation Observations}
+\section{Implementation Observations: Unit Tests}
 \label{sec:testImplObservations}
-This section is where the reflections about the programmatic part of the test should be. Hence NO reflections about methodology here.
-
-\paragraph{Acceptance Tests}
-
-\paragraph{Unit Tests}
 Unit tests were a good way to allow refactoring, since it made it easy to ensure the software functionality was not altered after a refactoring. However, that required extensive unit tests, which we did not have in some cases. This caused some trouble in form of recurring bugs. To solve this we could create a kind of testing convention, so for example when a method takes parameters, its test always makes boundary, and null checks of the parameters.%why didnt we do this?
 
 Boundary testing is for example when a test case for a method uses inputs just below, at and above the lowest and largest limits of the possible input values its parameters can have. This could for example be \texttt{INT\_MIN} and \texttt{INT\_MAX}, if a method has a parameter which is an integer.
