dynamicQueue and words replacements

--- a/Content/Iteration/release2Intro.tex
+++ b/Content/Iteration/release2Intro.tex
@@ -9,7 +9,7 @@ With the core music player application completed in the 2nd iteration we outline
 \item \textbf{Paradigm Overview}: Stakeholder is the user who is using the application, i.e., the runner.
 
 \item \textbf{Paradigm Details}: For this release there are two main scenarios to fulfil. Firstly the application should automatically select appropriate songs (songs with a matching BPM) to play as the user runs at varying paces. Secondly it should be possible to customise the song pool from which songs are selected.
-\item \textbf{Product Focus}: The application is first and foremost a running pacer, meaning the purpose is to match music tempo with the user's pace, measured in steps per minute. It is possible to add an option for interval training so the application no longer adapt music beat based on pace, but encourage the user to adapts his or her pace to predetermined intervals of low and high beat music. Additional training programs could also be added. The application can also serve as a step counter, not playing any music but just recording steps taken and displaying it as either total steps or steps per minute. Similarly it can just play music without taking SPM into account.
+\item \textbf{Product Focus}: The application is first and foremost a running pacer, meaning the purpose is to match music tempo with the user's pace, measured in steps per minute. It is possible to add an option for interval training so the application no longer adapt music tempo based on pace, but encourage the user to adapts his or her pace to predetermined intervals of low and high tempo music. Additional training programs could also be added. The application can also serve as a step counter, not playing any music but just recording steps taken and displaying it as either total steps or steps per minute. Similarly it can just play music without taking SPM into account.
 
 \item \textbf{Product Overview}: The application design should be based on a familiar music player design, and it should have the expected functionally from a music player, but new elements (such as SPM) should expand on the familiar design. The navigation buttons should be placed, so they are easy to use while moving.
 
