--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -34,7 +34,7 @@ This facilitates refactoring, pair programming, and encourages collective owners
 \paragraph{Collective Ownership} allows everyone to refactor and review the code.
 When no one person owns part of the code, collaboration is enforced while tedious change requests are avoided.
 
-\paragraph{Continuous Integration} is used to build the solution several times a day.
+\paragraph{Continuous Integration} is used to build the program several times a day.
 This keeps everybody up to date with the latest code changes, avoiding development on fragmented versions.
 
 \paragraph{Metaphor} is used as a shared vision for the project.
