--- a/Content/ReflectionMethodology/reflectionPlanning.tex
+++ b/Content/ReflectionMethodology/reflectionPlanning.tex
@@ -17,7 +17,7 @@ Taking the time to write the issues down would have helped us make sure, that th
 %Prioritising
 After the user stories were estimated it was our responsibility, as surrogate customers, to prioritise in what order the user stories should be implemented.
 Usually we prioritised them as we suspected an on-site customer would, according to cost/benefit.
-However, after the basic modules of the program were implemented, we started letting our developer hearts influence the decisions.
+However, after the basic modules of the application were implemented, we started letting our developer hearts influence the decisions.
 We started to prioritise the user stories by novelty, which essentially means by what we found new and interesting to implement.
 This caused the product to be more of a proof-of-concept product instead of the initial intended usable product.
 Although the product did not end up as what was intended from the get go, it showed us that XP was capable of embracing change.
