--- a/Content/MusicPlayer/implementation.tex
+++ b/Content/MusicPlayer/implementation.tex
@@ -3,7 +3,7 @@ The Music Player module consists of a number of classes, where the most notable 
 
 \subsection{DynamicQueue}
 \label{sec:dynamicQueue}
-This class is named based on the fact that it will update dynamically, depending on the pace of the user.
+This class is named based on the fact that it will update dynamically, depending on the pace of the user. \texttt{DynamicQueue} uses a lookahead queue and a previous queue to keeps track of the previously played and upcoming songs. The queues have fixed size so only a set numbers of songs will be stored at any given time. The only songs with matching tempo are loaded into the lookahead queue and only songs already played or skipped can be in the previous queue. 
 
 \subsection{MusicPlayerActivity}
 This is the central point of the application, responsible for managing the rest of the application, and giving the user a way of interacting with it. It starts the \texttt{MusicPlayerService}, calls the \texttt{DynamicQueue} for songs to play, attaches listeners to the buttons, making them clickable. It also checks that there are enough songs in the specified folder, sending the user to the settings menu if this is not the case.
