--- a/Content/Iteration/configurationTable1.tex
+++ b/Content/Iteration/configurationTable1.tex
@@ -7,7 +7,7 @@
 		\textit{Reflection}
 		\begin{itemize}[leftmargin=*]
 		\item Challenge: Can we improve the running experience?
-		\item Use context: Running while listening to music from a smart phone.
+		\item Use context: Running while listening to music from a smartphone.
 		\end{itemize}
 	}
 	& \parbox[t][][c]{0.20\textwidth}{ 
@@ -24,7 +24,7 @@
 		\textit{Vision} 
 		\begin{itemize}[leftmargin=*]
 		\item Vision: Running pacer by use of music. 
-		\item Use step counter to match song to running tempo.
+		\item Use step counter to match song to running pace.
 		\end{itemize}
 	}
     & \parbox[t][][c]{0.20\textwidth}{ 
@@ -52,7 +52,7 @@
 		\item Grounds: 
 		Music that fits your pace provides a better running experience. 
 		\item Warrant: 
-		When running it is human nature to match pace with the music playing. 
+		When running it is human nature to match pace with the tempo of the music playing. 
 		\item Qualifier:
 		Songs matching current pace required at all times.
 		\item Rebuttal: \newline
