--- a/Content/Iteration/introduction.tex
+++ b/Content/Iteration/introduction.tex
@@ -2,7 +2,7 @@ Over the course of this project we have been working in iterations of two weeks,
 
 In this project, we decided to work with selected parts of Essence from \texttt{Essence: Pragmatic Software Innovation} \citep{essence:config}. Essence is a methodology rooted in the pragmatic paradigm, as opposed to the agile or traditional paradigm. Essence is a response to a world view, where the context is constantly evolving, and there is no single best criteria to evaluate a product. Essence focuses on creating value for the customer, which is done by facilitating innovation. It relies on an iterative workflow, and adds an extra layer for evaluation of the process.
 
-We look to essence to evaluate our use of XP practise, this is done by review/retrospective after each iteration.
+We look to Essence to evaluate our use of XP practise, this is done by review/retrospective after each iteration.
 
 Further we describe our releases with Essence configurations. In Essence, a configuration is a look at the product after an iteration, you then move from configuration to configuration as you go though the iterations. 
 
