--- a/Content/Iteration/release2Intro.tex
+++ b/Content/Iteration/release2Intro.tex
@@ -9,7 +9,7 @@ With the core music player application completed in the 2nd iteration we outline
 \item \textbf{Paradigm Overview}: Stakeholder is the user who is using the application, i.e., the runner.
 
 \item \textbf{Paradigm Details}: For this release there are two main scenarios to fulfil. Firstly the application should automatically select appropriate songs (songs with a matching BPM) to play as the user runs at varying paces. Secondly it should be possible to customise the song pool from which songs are selected.
-\item \textbf{Product Focus}: The application is first and foremost a running pacer, meaning the purpose is to match music tempo with the user's pace, measured in steps per minute. It is possible to add an option for interval training so the application no longer adapt music beat based on pace, but encourage the user to adapts his or her pace to predetermined intervals of low and high beat music. Additional training programs could also be added. The application can also serve as a step counter, not playing any music but just recording steps taken and displaying it as either total steps or steps per minute. Similarly it can just play music without taking SPM into account.
+\item \textbf{Product Focus}: The application is first and foremost a running pacer, meaning the purpose is to match music tempo with the user's pace, measured in steps per minute. It is possible to add an option for interval training so the application no longer adapt the music tempo based on pace, but encourage the user to adapt his or her pace to predetermined intervals of low and high tempo music. Additional training programs could also be added. The application can also serve as a step counter, not playing any music but just recording steps taken and displaying it as either total steps or steps per minute. Similarly it can just play music without taking SPM into account.
 
 \item \textbf{Product Overview}: The application design should be based on a familiar music player design, and it should have the expected functionally from a music player, but new elements (such as SPM) should expand on the familiar design. The navigation buttons should be placed, so they are easy to use while moving.
 
@@ -21,7 +21,7 @@ With the core music player application completed in the 2nd iteration we outline
 \textit{Grounds:} As described in \cref{chap:intro}, music can have an influence on the running experience. Having music that matches your running pace makes sure it does not have a negative impact on the exercise session, and having the application find appropriate music automatically makes the process of finding good running music less tedious. \newline
 \textit{Warrant}: Many people prefer running while listening to music, and it will often result in people trying to match their running pace with the music playing. \newline
 \textit{Qualifier}: It is important that the song playing always, or as much as possible, matches the user's pace, so their running experience is not disrupted. \newline
-\textit{Rebuttal}: The user may change pace in the middle of a song, and this poses a problem. It could be solved by by altering the music's tempo just enough to match the new pace, without distorting the sound of the music too much. Another solution could be to transition to another piece of music, when the new pace is confirmed stable.
+\textit{Rebuttal}: The user may change pace in the middle of a song, and this poses a problem. It could be solved by altering the music's tempo just enough to match the new pace, without distorting the sound of the music too much. Another solution could be to transition to another piece of music, when the new pace is confirmed stable.
 
 \item \textbf{Project Details}: The application should work as a running pacer, a music player, and a step counter.
 
@@ -29,6 +29,6 @@ With the core music player application completed in the 2nd iteration we outline
 
 \item \textbf{Process Overview}: We evaluate the application from the customer's point of view at the end of each iteration. The evaluation is based on the fulfilment of acceptance tests.
 
-\item \textbf{Process Details}: While running it can be hard to control the application, as there is limited feedback when using a touch screen. Instead it should be possible to use gestures or taps to control the application, giving it a more 
+\item \textbf{Process Details}: While running it can be difficult to navigate the application, as there is limited feedback when using a touch screen. Instead it should be possible to use gestures or taps to control the application, giving it a more 
 consistent user experience.
 \end{itemize}
