--- a/Content/Conclusion/application.tex
+++ b/Content/Conclusion/application.tex
@@ -10,7 +10,7 @@ An Android application was developed in this project to address the challenges s
 It was found that it is possible to create an application consisting of several modules working together to achieve the desired result, i.e. an application that plays back music that matches the user's pace:
 
 \begin{itemize}
-\item \textbf{Music Player}: This module is the core of the application, responsible for playing the desired music. Using a GUI it is possible to navigate through a playlist manually, and with a combination of the build-in dynamic queue and the step counter module, it can automatically play back songs that match the user's running (or walking) pace.
+\item \textbf{Music Player}: This module is the core of the application, responsible for playing the desired music. Using a GUI it is possible to navigate through a playlist manually, and with a combination of the built-in dynamic queue and the step counter module, it can automatically play back songs that match the user's running (or walking) pace.
 \item \textbf{Song Scanner}: The song scanner is responsible for locating music on the device and maintaining a music library.
 \item \textbf{Step Counter}: This module uses the device's sensors to calculate the user's steps per minute.
 \end{itemize}
