--- a/Content/Iteration/release3Intro.tex
+++ b/Content/Iteration/release3Intro.tex
@@ -7,7 +7,7 @@ The 3rd and final release, a modification of the 2nd release, is outlined in \Cr
 
 \item \textbf{Product Overview}: The product design should include a way to interact with the application without a graphical interface.
 
-\item \textbf{Project Details}: While the components are the same, a new feature is needed for the music player: A non-graphical user interface, allowing the user to control the application while running and without looking at the screen.
+\item \textbf{Project Details}: While the components are the same, a new feature is needed for the music player: A non-graphical user interface, allowing the user to navigate the application while running and without looking at the screen.
 
 \item \textbf{Process Details}: Without any  feedback, e.g. a vibration, it is hard to determine if the command given in the non-graphical user interface was registered, making it harder to control properly. \newline
 Additionally, it is necessary to take an appropriate action if the user stops running. This could be recording their last stable pace, and keep playing songs matching that tempo.
